29 January 2019: Wouter
	- Fix spelling of tls-ciphers in example.conf.in.
	- Fix #4224: auth_xfr_notify.rpl test broken due to typo

28 January 2019: Wouter
	- ub_ctx_set_tls call for libunbound that enables DoT for the machines
	  set with ub_ctx_set_fwd.  Patch from Florian Obser.
	- Set build system for added call in the libunbound API.
	- List example config for root zone copy locally hosted with auth-zone
	  as suggested from draft-ietf-dnsop-7706-bis-02.  But with updated
	  B root address.
	- set version to 1.9.0 for release.

25 January 2019: Wouter
	- Fix that tcp for auth zone and outgoing does not remove and
	  then gets the ssl read again applied to the deleted commpoint.
	- updated contrib/fastrpz.patch to cleanly diff.
	- no lock when threads disabled in tcp request buffer count.
	- remove compile warnings from libnettle compile.
	- output of newer lex 2.6.1 and bison 3.0.5.

24 January 2019: Wouter
	- Newer aclocal and libtoolize used for generating configure scripts,
	  aclocal 1.16.1 and libtoolize 2.4.6.
	- Fix unit test for python 3.7 new keyword 'async'.
	- clang analysis fixes, assert arc4random buffer in init,
	  no check for already checked delegation pointer in iterator,
	  in testcode check for NULL packet matches, in perf do not copy
	  from NULL start list when growing capacity.  Adjust host and file
	  only when present in test header read to please checker.  In
	  testcode for unknown macro operand give zero result. Initialise the
	  passed argv array in test code.  In test code add EDNS data
	  segment copy only when nonempty.
	- Patch from Florian Obser fixes some compiler warnings:
	  include mini_event.h to have a prototype for mini_ev_cmp
	  include edns.h to have a prototype for apply_edns_options
	  sldns_wire2str_edns_keepalive_print is only called in the wire2str,
	  module declare it static to get rid of compiler warning:
	  no previous prototype for function
	  infra_find_ip_ratedata() is only called in the infra module,